--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:122821072700:ios:996b5d7b99ae6e332e3039",
-  "FIREBASE_PROJECT_ID": "attandanceapp-a7c51",
-  "GCM_SENDER_ID": "122821072700"
+  "GOOGLE_APP_ID": "1:54447661567:ios:2cd00bf673b000c33607ca",
+  "FIREBASE_PROJECT_ID": "attendance-ff489",
+  "GCM_SENDER_ID": "54447661567"
 }
